[workspace]
resolver = "2"

members = ["crates/snake_case", "crates/one_log", "crates/google_slides_speaker_notes_extraction"]

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = [
    "cargo",
    "derive",
    "env",
    "wrap_help",
] }
convert_case = "0.6.0"
log = "0.4.20"
log4rs = "1.2.0"
one_log = { version = "*", path = "crates/one_log" }
regex = "1.10.2"
rstest = "0.18.2"
