[workspace]
resolver = "2"

members = ["crates/snake_case"]

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["cargo", "derive", "env", "wrap_help"] }
convert_case = "0.6.0"
regex = "1.10.2"
rstest = "0.18.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
