[package]
name = "one_log"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shares logging setup code between crates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs.workspace = true
anyhow.workspace = true
log.workspace = true
clap.workspace = true
