[package]
name = "snake_case"
version = "0.1.0"
edition = "2021"
description = "Converts its input into snake case"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
convert_case.workspace = true
log.workspace = true
log4rs.workspace = true
regex.workspace = true

[dev-dependencies]
rstest.workspace = true
